@@ -12,7 +12,6 @@ import uk.gov.hmcts.reform.judicialapi.repository.IdamRepository;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.security.oauth2.core.endpoint.OAuth2ParameterNames.ACCESS_TOKEN;
 
@@ -54,7 +53,8 @@ public class JwtGrantedAuthoritiesConverter implements Converter<Jwt, Collection
     private List<GrantedAuthority> extractAuthorityFromClaims(List<String> roles) {
         return roles.stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .map(GrantedAuthority.class::cast)
+                .toList();
     }
 
     public  UserInfo getUserInfo() {
